[gd_scene load_steps=8 format=2]

[ext_resource path="res://Inflacao.gd" type="Script" id=1]
[ext_resource path="res://livroBiblioteca.png" type="Texture" id=2]
[ext_resource path="res://font/Symtext.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 70
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="livro" type="Sprite" parent="CanvasLayer"]
position = Vector2( 309, 181 )
scale = Vector2( 0.339583, 0.33287 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Pagina1" type="Label" parent="CanvasLayer/livro"]
anchor_left = 0.089
anchor_top = 0.046
anchor_right = 0.471
anchor_bottom = 0.937
margin_left = -959.88
margin_top = -539.68
margin_right = -960.32
margin_bottom = -539.96
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.952941, 0.0196078, 0.0196078, 1 )
custom_colors/font_color_shadow = Color( 1, 0.0901961, 0.0901961, 1 )
custom_fonts/font = SubResource( 3 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProximaPagina" type="Button" parent="CanvasLayer/livro"]
margin_left = 494.724
margin_top = 408.568
margin_right = 838.724
margin_bottom = 504.568
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Próxima página"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoltarPagina" type="Button" parent="CanvasLayer/livro"]
margin_left = -810.0
margin_top = 415.0
margin_right = -465.0
margin_bottom = 517.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Voltar Pagina"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoltarBiblioteca" type="Button" parent="CanvasLayer/livro"]
margin_left = 212.025
margin_top = -132.184
margin_right = 713.025
margin_bottom = 83.8162
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Voltar"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/livro/ProximaPagina" to="CanvasLayer/livro" method="_on_ProximaPagina_pressed"]
[connection signal="pressed" from="CanvasLayer/livro/VoltarPagina" to="CanvasLayer/livro" method="_on_VoltarPagina_pressed"]
[connection signal="pressed" from="CanvasLayer/livro/VoltarBiblioteca" to="CanvasLayer/livro" method="_on_VoltarBiblioteca_pressed"]
